# tfg

./: .env.example  README.md  docker-compose.yml  test-system.sh  tfg_test.db
backend/: Dockerfile  README.md  init_db.py  pyproject.toml  tfg_test.db
backend/app/: __init__.py  audit_interceptor.py  auth.py  config.py  database.py  main.py
backend/app/database/: __init__.py
backend/app/middleware/: secure_headers.py
backend/app/models/: __init__.py  asset.py  asset_tag.py  audit_log.py  data_source.py  tag.py
backend/app/routers/: health.py
backend/app/routers/v1/: __init__.py  assets.py  audit_logs.py  auth.py  data_sources.py  tags.py
backend/tfg_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx  ProtectedRoute.jsx
frontend/src/pages/: AuditLogs.jsx  Dashboard.jsx  Login.jsx  Tags.jsx
frontend/src/services/: api.js
k8s/: configmap.yaml  cronjobs.yaml  network-policies.yaml
openspec/: ESTADO-PROYECTO.md  README.md  RECOMENDACIONES-SEGURIDAD-UX.md  REVISION-consistencia-y-mejoras.md  config-v2.yaml  config.yaml
openspec/changes-v2/applications/: proposal.md
openspec/changes-v2/audit-logs/: proposal.md
openspec/changes-v2/branding/: .openspec.yaml  design.md  proposal.md
openspec/changes-v2/certificates/: proposal.md
openspec/changes-v2/dashboard/: proposal.md
openspec/changes-v2/data-sources/: tasks.md
openspec/changes-v2/eol/: design.md  proposal.md  tasks.md
(+119 files in other folders)
